fixed recipeItem text-overflow + update recipeDetail to fit with data + being able to get data from testRecipes - not api

--- a/Frontend/tabina/src/Css/page/recipe-detail.css
+++ b/Frontend/tabina/src/Css/page/recipe-detail.css
@@ -170,7 +170,8 @@
     font-weight: 700;
     font-size: 35px;
     line-height: 42px;
-    width: 317px;
+    /* width: 317px; */
+    flex-basis: 317px;
     /* flex-grow: 1; */
 }
 
@@ -202,21 +203,47 @@
 
 .recipe-detail-content-right-info-ingredients {
     display: flex;
+    margin-bottom: 60px;
+    gap: 122px
 }
 
 .recipe-detail-content-right-info-ingredients-list {
     display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
+    flex-wrap: wrap; 
 }
 
 .recipe-detail .ingredient-item {
-    /* margin-right: 30px; */
+    margin-right: 30px;
     margin-bottom: 20px;
 }
 
 .recipe-detail-content-right-info-calo {
+    display: flex;
+    align-items: center;
+    background-color: #F8DEC3;
+    height: 75px;
+    margin-bottom: 50px;
+}
 
+.recipe-detail-content-right-info-calo img {
+    width: 31px;
+    height: 31px;
+}
+
+.recipe-detail-content-right-info-calo-img-left {
+    margin-left: 45px;
+}
+
+.recipe-detail-content-right-info-calo-img-right {
+    margin-left: auto;
+    margin-right: 25px;
+}
+
+.recipe-detail-content-right-info-calo-span {
+    margin-left: 16px;
+    font-weight: 400;
+    font-size: 35px;
+    line-height: 42px;
 }
 
 .recipe-detail-content-right-instructions {
